--- a/SpaceSpector.html
+++ b/SpaceSpector.html
@@ -17,20 +17,20 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Merio Adventure</b></p>
-      <p>-<b>Giới thiệu</b>: Merio Adventure là tựa game thứ 2 được làm bằng Unity từ Kiga. Đây là một trong những tựa game nổi nhất của Kiga Studio, tựa game có nhiều cải tiến so với game đầu xong vẫn có nhiều lỗi.</p>
-      <p>-<b>Phiên bản</b>: 1.1</p>
-      <p>-<b>Phát hành</b>: 31/01/2024</p>
-      <p>-<b>Last Update</b>: 07/03/2024</p>
-      <p>-<b>Thể loại</b>: Difficult, Singleplayer, Adventure, Multilevel</p>
-      <p>-<b>Available</b>: PC</p>
+      <p style="text-align: center;"><b>Space Spector</b></p>
+      <p>-<b>Giới thiệu</b>: Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng. </p>
+      <p>-<b>Phiên bản</b>: 1.0</p>
+      <p>-<b>Phát hành</b>: 17/06/2024</p>
+      <p>-<b>Last Update</b>: 17/06/2024</p>
+      <p>-<b>Thể loại</b>: Endless, Singleplayer</p>
+      <p>-<b>Available</b>: PC, Website</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-      <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/merio-adventure?secret=pHGE4AQ49rf1EXzAX1YtxCH2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-        <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/merio-adventure-web?secret=EiCxFQ4Q3QZ0VYIzbx9ekXUloiE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-        <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+      <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+      <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
@@ -39,27 +39,19 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/merioadventure/Slide1.PNG" class="d-block w-100" alt="...">
+      <img src="img/spacespector/Screenshot 09-09-2024 075708.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/merioadventure/Slide2.PNG" class="d-block w-100" alt="...">
+      <img src="img/spacespector/Screenshot 09-09-2024 075720.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/merioadventure/Slide3.PNG" class="d-block w-100" alt="...">
+      <img src="img/spacespector/Screenshot 09-09-2024 075727.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/merioadventure/Slide4.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/merioadventure/Slide5.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/merioadventure/Slide6.PNG" class="d-block w-100" alt="...">
+      <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
