--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/chigybird/Screenshot 08-09-2024 214932.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Chigy Birds</h5>
             <p>Angry Birds Fake 99%</p>
@@ -132,6 +132,7 @@
                 <p class="card-text">Low Parkour nhưng mà ở đắng cấp khác. Cú nhảy may mắn - Cái chết bất ngờ!</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="HiddenBlock.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -248,6 +249,7 @@
                 <p class="card-text">Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="SpaceSpector.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
@@ -265,6 +267,7 @@
                 <p class="card-text">Siêu phẩm game mùa hè năm nay! Giả lập làm đầu bếp quán mắc đô nờ. Sẽ có Update siêu lớn trong tương lai.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="KitchenChaos.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
