--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/wordsattack/Screenshot 14-12-2024 162515.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/waifudefense/Screenshot 09-12-2024 224609.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -161,6 +161,23 @@
                   <div class="btn-group">
                     <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/wordsattack/Screenshot 14-12-2024 162515.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Words Attack</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="WordsAttack.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/words-attack?secret=EkExVcDXhjjYVeHvBS7oEQ5KaE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -325,24 +342,6 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleUpdate">
-              <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-success reggae-one-regular gameTitle">Solo Shooting</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/solo-shooting-web?secret=7YC0PwofQVjnk980AoMnrP7eQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
             <div class="card shadow-sm styleHot">
               <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
               <div class="card-body">
@@ -461,6 +460,24 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Solo Shooting</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/solo-shooting-web?secret=7YC0PwofQVjnk980AoMnrP7eQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
