--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/wordsattack/Screenshot 14-12-2024 162515.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -83,8 +83,8 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/signal/Screenshot 19-12-2024 203102.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -161,6 +161,24 @@
                   <div class="btn-group">
                     <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/signal/Screenshot 19-12-2024 203102.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Signal</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Signal.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/signal?secret=ehdM6taF1z1FQkg7rO9QGefChuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Genshin.signalskin" download><button type="button" class="btn btn-sm btn-outline-secondary">Genshin Skin</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
