--- a/WhoIsFaker.html
+++ b/WhoIsFaker.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Kitchen Chaos</title>
+    <title>Who Is Faker</title>
 </head>
 <body>
 <div class="row">
@@ -17,40 +17,28 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Kitchen Chaos</b></p>
-      <p>-<b>Giới thiệu</b>: Siêu phẩm mùa đông năm 2024</p>
-      <p>-<b>Phiên bản</b>: 2.0</p>
-      <p>-<b>Phát hành</b>: 30/12/2024</p>
-      <p>-<b>Last Update</b>: 30/12/2024</p>
+      <p style="text-align: center;"><b>Who Is Faker</b></p>
+      <p>-<b>Giới thiệu</b>: Among ú</p>
+      <p>-<b>Phiên bản</b>: 1.0</p>
+      <p>-<b>Phát hành</b>: 16/01/2025</p>
+      <p>-<b>Last Update</b>: 16/01/2025</p>
       <p>-<b>Thể loại</b>: Multiplayer</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/who-is-faker?secret=JBbwF20dS8tZEpB4AYRxxBqNsAo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/kitchenchaos/Screenshot 09-09-2024 075353.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/kitchenchaos/Screenshot 09-09-2024 075407.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/kitchenchaos/Screenshot 09-09-2024 075438.jpg" class="d-block w-100" alt="...">
+      <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
