--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item"> 
-          <img src="img/nottennistime/Screenshot 06-12-2024 113020.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active"> 
+          <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/signal/Screenshot 19-12-2024 203102.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -133,6 +133,22 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="col">
+            <div class="card shadow-sm styleBig">
+              <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-danger reggae-one-regular gameTitle">Who Is Faker</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="WhoIsFaker.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/who-is-faker?secret=JBbwF20dS8tZEpB4AYRxxBqNsAo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleBig">
