--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -83,8 +83,8 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/signal/Screenshot 19-12-2024 203102.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/spacequest/Screenshot 02-04-2025 001349.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -136,13 +136,30 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
+              <img src="img/spacequest/Screenshot 02-04-2025 001349.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Space Quest</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="SpaceQuest.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/space-quest?secret=rffAWdpYMt1umNf6uBIkgLtjP5M" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
               <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" height="225"> 
               <div class="card-body">
                 <h4 class="text-info reggae-one-regular gameTitle">CSSGO (Bugged)</h4>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a hidden href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a hidden href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -162,23 +179,6 @@
                     <a href="Signal.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/signal?secret=ehdM6taF1z1FQkg7rO9QGefChuo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="download/Genshin.signalskin" download><button type="button" class="btn btn-sm btn-outline-secondary">Genshin Skin</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/wordsattack/Screenshot 14-12-2024 162515.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">Words Attack</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="WordsAttack.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/words-attack?secret=EkExVcDXhjjYVeHvBS7oEQ5KaE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -460,6 +460,23 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/wordsattack/Screenshot 14-12-2024 162515.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="reggae-one-regular gameTitle">Words Attack</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="WordsAttack.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/words-attack?secret=EkExVcDXhjjYVeHvBS7oEQ5KaE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
