--- a/index.html
+++ b/index.html
@@ -240,41 +240,6 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleUpdate">
-              <img src="img/zombiehunter/Screenshot 28-11-2024 090818.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-success reggae-one-regular gameTitle">Zombie Hunter</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleUpdate">
-              <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-success reggae-one-regular gameTitle">Hidden Block</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="HiddenBlock.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="download/Hidden Block.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
             <div class="card shadow-sm styleBig">
               <img src="img/epicbrawl/Screenshot 27-01-2025 165717.jpg" height="225"> 
               <div class="card-body">
@@ -460,6 +425,41 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/zombiehunter/Screenshot 28-11-2024 090818.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text reggae-one-regular gameTitle">Zombie Hunter</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text reggae-one-regular gameTitle">Hidden Block</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="HiddenBlock.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Hidden Block.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
